deployment/httpserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  selector:
    app: httpserver
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: 80
